--- a/package.json
+++ b/package.json
@@ -1,15 +1,38 @@
 {
-  "name": "zagat-similar-restaurants-module",
-  "version": "1.0",
-  "description": "this module show similar restaurant to the one displayed on a page",
+  "name": "zagat-similar-restaurants-grid-module",
+  "version": "1.0.0",
+  "description": "This module shows similar restaurant to the one displayed on a page by category and neighborhood.",
+  "main": "server/index.js",
   "author": "Cinzia Borello",
-  "license": "",
+  "license": "ISC",
   "engines": {
     "node": ">=6.13.0"
   },
-  "scripts": {},
-  "dependencies": {},
+  "scripts": {
+    "test": "",
+    "build": "webpack --config webpack.config.js",
+    "start": "nodemon server/index.js",
+    "client": "webpack -d --watch"
+  },
+  "dependencies": {
+    "axios": "^0.19.2",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "@babel/core": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
