--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "start": "nodemon server/index.js",
     "client": "webpack -d --watch",
     "schema": "mysql -u root < database/schema.sql",
-    "seed": ""
+    "seed": "node seed.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "faker": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.0",
@@ -34,7 +36,6 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.5",
     "eslint-plugin-react-hooks": "^4.0.0",
-    "faker": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
