--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "faker": "^4.1.0"
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.0",
