Install and config Jest and Enzyme

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "test": "",
+    "test": "jest",
     "build": "webpack --config webpack.config.js",
     "start": "nodemon server/index.js",
     "client": "webpack -d --watch",
@@ -30,13 +30,19 @@
     "@babel/core": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.11.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.5",
     "eslint-plugin-react-hooks": "^4.0.0",
+    "jest": "^26.3.0",
+    "react-test-renderer": "^16.13.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
