Refactor some code to clean up warnings and mislabeling

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "faker": "^4.1.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.1"
