Rewrite restaurantdatagen.js for robust schema, create .sql file reflecting schema, .gitignore data files

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ dist/
 # Files
 dbconfig.js
 database/dbconfig.js
+restaurantcategories.csv
+restaurantdata.csv
+restaurantneighborhoods.csv
+restaurantphotos.csv
