Create datageneration file for Cassandra

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ restaurantcategories.csv
 restaurantdata.csv
 restaurantneighborhoods.csv
 restaurantphotos.csv
+cassandrarest.csv
+cassandraneighb.csv
