--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "faker": "^4.1.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
+    "pg-promise": "^10.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
