--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "mysql": "^2.18.1",
+    "newrelic": "^6.13.0",
     "nodemon": "^2.0.4",
     "pg-promise": "^10.6.1",
     "prop-types": "^15.7.2",
