Edit artillery file and number generator to favor ids in last 10% of records

--- a/artillery-test.yaml
+++ b/artillery-test.yaml
@@ -1,8 +1,14 @@
 config:
   target: "http://localhost:3004/"
   phases:
-    - duration: 300
+    - duration: 60
       arrivalRate: 1
+    - duration: 60
+      arrivalRate: 10
+    - duration: 60
+      arrivalRate: 100
+    - duration: 60
+      arrivalRate: 1000
   processor: "./randomnumber.js"
 
 scenarios:
