--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ dist/
 
 # Files
 dbconfig.js
-database/dbconfig.js
+/database/dbconfig.js
 newrelic.js
 restaurantcategories.csv
 restaurantdata.csv
